fix: icon contrast again

--- a/css/whatsapp-web-catppuccin.user.css
+++ b/css/whatsapp-web-catppuccin.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           WhatsApp Web Catppuccin
 @namespace      github.com/FrancoRav/whatsapp-web
-@version        0.1.29
+@version        0.1.30
 @description    Soothing pastel theme for WhatsApp Web.
 @author         francorav
 @updateURL      https://raw.githubusercontent.com/FrancoRav/whatsapp-web/main/css/whatsapp-web-catppuccin.user.css
@@ -597,7 +597,7 @@
         --drawer-section-background: var(--base) !important;
         /* new chat icons */
         --round-icon-background: var(--green) !important;
-        --inverse: var(--surface1) !important;
+        --inverse: var(--crust) !important;
         /* title and icon for drawers */
         --drawer-header-title: var(--text) !important;
         /* buttons such as create community */
